--- a/EFI/OC/config.plist
+++ b/EFI/OC/config.plist
@@ -70,6 +70,14 @@
                     <key>Path</key>
                     <string>SSDT-GPRW.aml</string>
                 </dict>
+                <dict>
+                    <key>Comment</key>
+                    <string>NullEthernet</string>
+                    <key>Enabled</key>
+                    <true/>
+                    <key>Path</key>
+                    <string>ssdt-rmne.aml</string>
+                </dict>
             </array>
             <key>Delete</key>
             <array>
@@ -430,15 +438,35 @@
                 <key>PciRoot(0x0)/Pci(0x2,0x0)</key>
                 <dict>
                     <key>AAPL,ig-platform-id</key>
-                    <data>AADAhw==</data>
+                    <data>AAAWWQ==</data>
                     <key>AAPL,slot-name</key>
                     <string>Internal@0,2,0</string>
                     <key>device-id</key>
                     <data>FlkAAA==</data>
                     <key>device_type</key>
                     <string>Display Controller</string>
+                    <key>disable-external-gpu</key>
+                    <data>AQAAAA==</data>
                     <key>enable-hdmi20</key>
                     <data>AQAAAA==</data>
+                    <key>force-online</key>
+                    <data>AQAAAA==</data>
+                    <key>framebuffer-con1-busid</key>
+                    <data>AAAAAA==</data>
+                    <key>framebuffer-con1-enable</key>
+                    <data>AQAAAA==</data>
+                    <key>framebuffer-con1-flags</key>
+                    <data>IAAAAA==</data>
+                    <key>framebuffer-con1-index</key>
+                    <data>/////w==</data>
+                    <key>framebuffer-con1-pipe</key>
+                    <data>AAAAAA==</data>
+                    <key>framebuffer-con1-type</key>
+                    <data>AQAAAA==</data>
+                    <key>framebuffer-patch-enable</key>
+                    <data>AQAAAA==</data>
+                    <key>framebuffer-unifiedmem</key>
+                    <data>AAAAgA==</data>
                     <key>hda-gfx</key>
                     <string>onboard-1</string>
                     <key>model</key>
@@ -652,6 +680,24 @@
                     <true/>
                     <key>ExecutablePath</key>
                     <string>Contents/MacOS/CpuTscSync</string>
+                    <key>MaxKernel</key>
+                    <string></string>
+                    <key>MinKernel</key>
+                    <string></string>
+                    <key>PlistPath</key>
+                    <string>Contents/Info.plist</string>
+                </dict>
+                <dict>
+                    <key>Arch</key>
+                    <string>Any</string>
+                    <key>BundlePath</key>
+                    <string>NullEthernetInjector.kext</string>
+                    <key>Comment</key>
+                    <string>V1.0.6 | Fix Appstore </string>
+                    <key>Enabled</key>
+                    <true/>
+                    <key>ExecutablePath</key>
+                    <string></string>
                     <key>MaxKernel</key>
                     <string></string>
                     <key>MinKernel</key>
@@ -1664,7 +1710,7 @@
                     <key>SystemAudioVolume</key>
                     <data>Rg==</data>
                     <key>boot-args</key>
-                    <string>-v keepsyms=1 debug=0x100</string>
+                    <string>-v keepsyms=1 debug=0x100 -cputsclock</string>
                     <key>csr-active-config</key>
                     <data>AAAAAA==</data>
                     <key>prev-lang:kbd</key>
@@ -1735,13 +1781,13 @@
                 <key>AdviseFeatures</key>
                 <false/>
                 <key>MLB</key>
-                <string>FVF934700GU0000JA</string>
+                <string>FVF027101GU00001H</string>
                 <key>MaxBIOSVersion</key>
                 <false/>
                 <key>ProcessorType</key>
                 <integer>0</integer>
                 <key>ROM</key>
-                <data>h/ZqeOkw</data>
+                <data>nbdYq5bN</data>
                 <key>SpoofVendor</key>
                 <true/>
                 <key>SystemMemoryStatus</key>
@@ -1749,9 +1795,9 @@
                 <key>SystemProductName</key>
                 <string>MacBookPro15,4</string>
                 <key>SystemSerialNumber</key>
-                <string>FVFZ8NY2L40Y</string>
+                <string>FVFD1SYWL40Y</string>
                 <key>SystemUUID</key>
-                <string>A68605CF-79F9-4098-B599-15B8EF6E6A4A</string>
+                <string>DC1C45DE-B380-446A-9301-178B955CC253</string>
             </dict>
             <key>UpdateDataHub</key>
             <true/>
